@@ -1,32 +1,35 @@
 package faang.school.urlshortenerservice.encoder;
 
+import lombok.Setter;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
+@Setter
 public class Base62Encoder {
-    private static final String BASE_62_CHARACTERS = "0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz";
-    private static final int BASE = BASE_62_CHARACTERS.length();
+
+    @Value("${hash.base62_charset}")
+    private String base62Charsets;
 
     public List<String> encode(List<Long> numbers) {
         return numbers.stream()
                 .map(this::encodeNumber)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private String encodeNumber(long number) {
+        StringBuilder sb = new StringBuilder();
         if (number == 0) {
-            return String.valueOf(BASE_62_CHARACTERS.charAt(0));
+            sb.append(base62Charsets.charAt(0));
         }
-
-        StringBuilder encoded = new StringBuilder();
         while (number > 0) {
-            int remainder = (int) (number % BASE);
-            encoded.append(BASE_62_CHARACTERS.charAt(remainder));
-            number /= BASE;
+            int remainder = (int) (number % base62Charsets.length());
+            sb.append(base62Charsets.charAt(remainder));
+            number /= base62Charsets.length();
         }
-
-        return encoded.reverse().toString();
+        return sb.toString();
     }
 }
